--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+<link rel="stylesheet" href="styles.css">
+</head>
 <body>
-
-  
+<h1>
+  Welcome to Project 2!
+</h1>
+<p class=.info>
+  Gengis
+</p>
 </body>
 </html>
