--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 <p class="info">
   Gengis
 </p>
+<p class="right">
+  ehfhdhjdhfjhdjfh ehfjejfhejh jfhe jehfjehjfhj ejfhjdfdhjfhejf
+</p>
 </body>
 </html>
