--- a/index.html
+++ b/index.html
@@ -7,12 +7,8 @@
 <h1>
   Welcome to Project 2!
 </h1>
-<hr style="color=white;">
 <p class="info">
-  Gengis
-</p>
-<p class="right">
-  Sise <br> Side <br> side <br Side
+  Welcome to Project 2
 </p>
 </body>
 </html>
