--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   Welcome to Project 2!
 </h1>
 <p class="info">
-  Welcome to Project 2
+  Choose one of the given pronouns!
 </p>
+<button> He/Him </button>
+<button> They/Them </button>
+<button> She/Her </button>
 </body>
 </html>
