--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <p class="info">
   Choose one of the given pronouns!
 </p>
-<button> He/Him </button>
-<button> They/Them </button>
-<button> She/Her </button>
+<button1> He/Him </button1>
+<button2> They/Them </button2>
+<button3> She/Her </button3>
 </body>
 </html>
