--- a/index.html
+++ b/index.html
@@ -10,8 +10,35 @@
 <p class="info">
   Choose one of the given pronouns!
 </p>
-<button class="button button1"> He/Him </button>
-<button class="button button2"> They/Them </button>
-<button class="button button3"> She/Her </button>
+<button class="button button1" onclick="GetValueHe();"> He/Him </button>
+<button class="button button2" onclick="GetValueThey();"> They/Them </button>
+<button class="button button3" onclick="GetValueHer();"> She/Her </button>
+<script>
+function GetValueHe()
+{
+    var myarray= new Array("He went to the shop today.","Did you see his latest creation? It was awesome!","I really enjoyed spending time with him, his dog is so adorable!");
+    var random = myarray[Math.floor(Math.random() * myarray.length)];
+    document.getElementById("result1").innerHTML=random;
+}
+</script>
+<script>
+function GetValueThey()
+{
+    var myarray= new Array("They went to the shop today.","Did you see their latest creation? It was awesome!","I really enjoyed spending time with them, their dog is so adorable!");
+    var random = myarray[Math.floor(Math.random() * myarray.length)];
+    document.getElementById("result2").innerHTML=random;
+}
+</script>
+<script>
+function GetValueHer()
+{
+    var myarray= new Array("She went to the shop today.","Did you see her latest creation? It was awesome!","I really enjoyed spending time with her, her dog is so adorable!");
+    var random = myarray[Math.floor(Math.random() * myarray.length)];
+    document.getElementById("result3").innerHTML=random;
+}
+</script>
+<p id="result1"></p>
+<p id="result2"></p>
+<p id="result3"></p>
 </body>
 </html>
