--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@ function GetValueHer()
     document.getElementById("result3").innerHTML=random;
 }
 </script>
-<p id="result1"></p>
-<p id="result2"></p>
-<p id="result3"></p>
+<p class="output" id="result1;"></p>
+<p class="output" id="result2;"></p>
+<p class="output" id="result3;"></p>
 </body>
 </html>
