--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
 <script>
 function GetValueHe()
 {
-    var myarray= new Array("He went to the shop today.","Did you see his latest creation? It was awesome!","I really enjoyed spending time with him, his dog is so adorable!");
-    var random = myarray[Math.floor(Math.random() * myarray.length)];
+    var myarray1= new Array("He went to the shop today.","Did you see his latest creation? It was awesome!","I really enjoyed spending time with him, his dog is so adorable!");
+    var random = myarray1[Math.floor(Math.random() * myarray1.length)];
     document.getElementById("result1").innerHTML=random;
 }
 </script>
 <script>
 function GetValueThey()
 {
-    var myarray= new Array("They went to the shop today.","Did you see their latest creation? It was awesome!","I really enjoyed spending time with them, their dog is so adorable!");
-    var random = myarray[Math.floor(Math.random() * myarray.length)];
+    var myarray2= new Array("They went to the shop today.","Did you see their latest creation? It was awesome!","I really enjoyed spending time with them, their dog is so adorable!");
+    var random = myarray2[Math.floor(Math.random() * myarray2.length)];
     document.getElementById("result2").innerHTML=random;
 }
 </script>
 <script>
 function GetValueHer()
 {
-    var myarray= new Array("She went to the shop today.","Did you see her latest creation? It was awesome!","I really enjoyed spending time with her, her dog is so adorable!");
-    var random = myarray[Math.floor(Math.random() * myarray.length)];
+    var myarray3= new Array("She went to the shop today.","Did you see her latest creation? It was awesome!","I really enjoyed spending time with her, her dog is so adorable!");
+    var random = myarray3[Math.floor(Math.random() * myarray3.length)];
     document.getElementById("result3").innerHTML=random;
 }
 </script>
