--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ function GetValueHe()
 {
     var myarray1= new Array("He went to the shop today.","Did you see his latest creation? It was awesome!","I really enjoyed spending time with him, his dog is so adorable!");
     var random = myarray1[Math.floor(Math.random() * myarray1.length)];
-    document.getElementById("result1").innerHTML=random;
+    document.getElementById("result").innerHTML=random;
 }
 </script>
 <script>
@@ -26,7 +26,7 @@ function GetValueThey()
 {
     var myarray2= new Array("They went to the shop today.","Did you see their latest creation? It was awesome!","I really enjoyed spending time with them, their dog is so adorable!");
     var random = myarray2[Math.floor(Math.random() * myarray2.length)];
-    document.getElementById("result2").innerHTML=random;
+    document.getElementById("result").innerHTML=random;
 }
 </script>
 <script>
@@ -34,11 +34,9 @@ function GetValueHer()
 {
     var myarray3= new Array("She went to the shop today.","Did you see her latest creation? It was awesome!","I really enjoyed spending time with her, her dog is so adorable!");
     var random = myarray3[Math.floor(Math.random() * myarray3.length)];
-    document.getElementById("result3").innerHTML=random;
+    document.getElementById("result").innerHTML=random;
 }
 </script>
-<p class="output" id="result1"></p>
-<p class="output" id="result2"></p>
-<p class="output" id="result3"></p>
+<p class="output" id="result"></p>
 </body>
 </html>
