--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script>
 function GetValueHe()
 {
-    var myarray1= new Array("He went to the shop today.","Did you see his latest creation? It was awesome!","I really enjoyed spending time with him, his dog is so adorable!");
+    var myarray1= new Array("Oh, didn't you hear? He just got himself a new bike! A blue one at that!","Wow! His outfit is stunning! He should really teach me how to dress!","His sister wasn't nearly as nice as him, almost got my neck snapped!","He's been sitting there for a while now, should we ask him what he's doing?","Wish I was friends with him, he seems so cool and chill!","Hey! Why don't we grab some cake for him? It is his birthday, after all!","He went to the shop today.","Did you see his latest creation? It was awesome!","I really enjoyed spending time with him, his dog is so adorable!");
     var random = myarray1[Math.floor(Math.random() * myarray1.length)];
     document.getElementById("result").innerHTML=random;
 }
@@ -24,7 +24,7 @@ function GetValueHe()
 <script>
 function GetValueThey()
 {
-    var myarray2= new Array("They went to the shop today.","Did you see their latest creation? It was awesome!","I really enjoyed spending time with them, their dog is so adorable!");
+    var myarray2= new Array("Oh, didn't you hear? They just got themself a new bike! A blue one at that!","Wow! Their outfit is stunning! They should really teach me how to dress!","Their sister wasn't nearly as nice as them, almost got my neck snapped!","They've been sitting there for a while now, should we ask them what they're doing?","Wish I was friends with them, they seem so cool and chill!","Hey! Why don't we grab some cake for them? It is their birthday, after all!","They went to the shop today.","Did you see their latest creation? It was awesome!","I really enjoyed spending time with them, their dog is so adorable!");
     var random = myarray2[Math.floor(Math.random() * myarray2.length)];
     document.getElementById("result").innerHTML=random;
 }
@@ -32,7 +32,7 @@ function GetValueThey()
 <script>
 function GetValueHer()
 {
-    var myarray3= new Array("She went to the shop today.","Did you see her latest creation? It was awesome!","I really enjoyed spending time with her, her dog is so adorable!");
+    var myarray3= new Array("Oh, didn't you hear? She just got herself a new bike! A blue one at that!","Wow! Her outfit is stunning! She should really teach me how to dress!","Her sister wasn't nearly as nice as her, almost got my neck snapped!","She's been sitting there for a while now, should we ask her what she's doing?","Wish I was friends with her, she seems so cool and chill!","Hey! Why don't we grab some cake for her? It is her birthday, after all!","She went to the shop today.","Did you see her latest creation? It was awesome!","I really enjoyed spending time with her, her dog is so adorable!");
     var random = myarray3[Math.floor(Math.random() * myarray3.length)];
     document.getElementById("result").innerHTML=random;
 }
