--- a/index.html
+++ b/index.html
@@ -38,5 +38,6 @@ function GetValueHer()
 }
 </script>
 <p class="output" id="result"></p>
+<p class="last">Illum's 2nd project, June 2-3, 2021</p>
 </body>
 </html>
