--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 </head>
 <body>
 <h1>
-  Welcome to Project 2!
+  Welcome to the sentence generator!
 </h1>
 <p class="info">
-  Choose one of the given pronouns!
+  Please choose one of the given pronouns!
 </p>
 <button class="button button1" onclick="GetValueHe();"> He/Him </button>
 <button class="button button2" onclick="GetValueThey();"> They/Them </button>
