--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ function GetValueHer()
 <script>
 function GetValueXe()
 {
-    var myarray4= new Array("Oh, didn't you hear? Xe just got xemself a new bike! A blue one at that!","Wow! Xyr outfit is stunning! Xe should really teach me how to dress!","Xyr sister wasn't nearly as nice as xem, almost got my neck snapped!","Xe's been sitting there for a while now, should we ask xem what xe's doing?","Wish I was friends with xem, xe seems so cool and chill!","Hey! Why don't we grab some cake for xem? It is xyr birthday, after all!","Xe went to the shop today.","Did you see xyr latest creation? It was awesome!","I really enjoyed spending time with xem, xyr Please choose one of the gi dog is so adorable!");
+    var myarray4= new Array("Oh, didn't you hear? Xe just got xemself a new bike! A blue one at that!","Wow! Xyr outfit is stunning! Xe should really teach me how to dress!","Xyr sister wasn't nearly as nice as xem, almost got my neck snapped!","Xe's been sitting there for a while now, should we ask xem what xe's doing?","Wish I was friends with xem, xe seems so cool and chill!","Hey! Why don't we grab some cake for xem? It is xyr birthday, after all!","Xe went to the shop today.","Did you see xyr latest creation? It was awesome!","I really enjoyed spending time with xem, xyr dog is so adorable!");
     var random = myarray4[Math.floor(Math.random() * myarray4.length)];
     document.getElementById("result").innerHTML=random;
 }
